# LifeGame

./: LifeGame.exe.lnk  README.md  presentation.pptx
Life/: Button.cpp  Button.h  CMakeLists.txt  Field.cpp  Field.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h  main.cpp
Life/Classes/: Button.h  Field.cpp  Field.h  Figure.cpp  Figure.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h
report/: report.docx
